change heading to Awesome background generator

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Awesome Background</title>
+	<title>Awesome Background Generator</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="background_color">
